refactored some of js to use jQuery and updated fieldset styles

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css">
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Document</title>
+    <title>junrl. The new way to take notes</title>
 </head>
 
 <body>
@@ -41,56 +41,61 @@
                         </a>
                     </p>
     </nav>
-    <section class="hero">
-        <div class="hero-body columns">
-            <div class="container column">
-                <h1 class="brand animated fadeInUp">jurnl.</h1>
-                <h3 class="subtitle animated fadeIn">The revolutionary new note-taking app.</h3>
-                <p class="subtitle2 animated fadeIn">Because having to remember everything is
-                    <em>so</em> 2012</p>
+
+    <div class="wrapper">
+        <section class="hero">
+            <div class="hero-body columns">
+                <div class="container column">
+                    <h1 class="brand animated fadeInUp">jurnl.</h1>
+                    <h3 class="subtitle animated fadeIn">The revolutionary new note-taking app.</h3>
+                    <p class="subtitle2 animated fadeIn">Because using pen and paper is
+                        <strong>
+                            <em>so</em>
+                        </strong> 2012</p>
+                </div>
+                <div class="example rounded column animated fadeInRight">
+                    <h2 class="is-size-5 has-text-weight-bold purple-text">Hi! I'm a junrl</h2>
+                    <p>I'm here to make your life easier. Are you tired of writing everything down, only to forget them a few minutes later? With jurnl, you no longer have
+                        to. No more missing out on the important things in life, like your son's birthday or picking up your
+                        mom from the airport
+                    </p>
+                    <p>Don't remember it,
+                        <span class="purple-text has-text-weight-bold">jurnl it.</span>
+                    </p>
+                </div>
             </div>
-            <div class="example rounded column animated fadeInRight">
-                <h2 class="is-size-5 has-text-weight-bold purple-text">Hi! I'm a junrl</h2>
-                <p>I'm here to make your life easier. Are you tired of forgetting things? With jurnl, you no longer have to.
-                    No more missing out on the important things in life, like your son's birthday or picking up your mom
-                    from the airport
-                </p>
-                <p>Don't remember it,
-                    <span class="purple-text has-text-weight-bold">jurnl it.</span>
-                </p>
-            </div>
-        </div>
 
 
-    </section>
+        </section>
 
-    <article class="container">
-        <p>Lorem ipsum dolor amet flexitarian poke skateboard raclette yuccie DIY shoreditch raw denim messenger bag beard cred
-            unicorn. Venmo letterpress literally blog marfa, hella neutra affogato blue bottle tote bag drinking vinegar
-            pork belly la croix stumptown. Kogi fashion axe jean shorts you probably haven't heard of them austin, retro
-            skateboard brooklyn brunch squid kitsch 3 wolf moon succulents. Semiotics unicorn cray, franzen taxidermy bicycle
-            rights farm-to-table literally VHS tbh four loko cold-pressed offal bespoke. Narwhal ennui fingerstache, normcore
-            gentrify biodiesel tousled hexagon yr cornhole small batch farm-to-table.</p>
+        <article class="container">
+            <p>Lorem ipsum dolor amet flexitarian poke skateboard raclette yuccie DIY shoreditch raw denim messenger bag beard
+                cred unicorn. Venmo letterpress literally blog marfa, hella neutra affogato blue bottle tote bag drinking
+                vinegar pork belly la croix stumptown. Kogi fashion axe jean shorts you probably haven't heard of them austin,
+                retro skateboard brooklyn brunch squid kitsch 3 wolf moon succulents. Semiotics unicorn cray, franzen taxidermy
+                bicycle rights farm-to-table literally VHS tbh four loko cold-pressed offal bespoke. Narwhal ennui fingerstache,
+                normcore gentrify biodiesel tousled hexagon yr cornhole small batch farm-to-table.</p>
 
-        <p>Blue bottle neutra small batch vinyl fam occupy bitters poke truffaut skateboard pabst quinoa 90's mlkshk butcher.
-            Taiyaki palo santo messenger bag four dollar toast DIY tumblr. Venmo chambray knausgaard, pinterest portland
-            yuccie shoreditch irony schlitz tattooed. Messenger bag chartreuse 8-bit, disrupt truffaut pickled portland hexagon
-            kickstarter echo park cardigan chillwave PBR&B hot chicken heirloom. Truffaut fashion axe hell of pinterest pop-up
-            iPhone hoodie pabst hexagon chartreuse vexillologist retro wolf. Tumblr kombucha green juice narwhal. Lumbersexual
-            butcher green juice crucifix thundercats.</p>
+            <p>Blue bottle neutra small batch vinyl fam occupy bitters poke truffaut skateboard pabst quinoa 90's mlkshk butcher.
+                Taiyaki palo santo messenger bag four dollar toast DIY tumblr. Venmo chambray knausgaard, pinterest portland
+                yuccie shoreditch irony schlitz tattooed. Messenger bag chartreuse 8-bit, disrupt truffaut pickled portland
+                hexagon kickstarter echo park cardigan chillwave PBR&B hot chicken heirloom. Truffaut fashion axe hell of
+                pinterest pop-up iPhone hoodie pabst hexagon chartreuse vexillologist retro wolf. Tumblr kombucha green juice
+                narwhal. Lumbersexual butcher green juice crucifix thundercats.</p>
 
-        <p>Quinoa etsy cold-pressed 90's aesthetic. Meh prism organic 3 wolf moon waistcoat. Flannel jianbing kinfolk echo park
-            gentrify PBR&B ethical selvage. Cloud bread portland lumbersexual iceland vinyl synth bespoke, air plant four
-            loko try-hard normcore selfies ennui roof party neutra. Man bun vape humblebrag, butcher +1 affogato post-ironic
-            tbh. Banh mi lo-fi knausgaard, celiac poke cold-pressed 3 wolf moon keytar. Street art food truck gochujang neutra
-            literally iPhone disrupt man braid..</p>
-        <span class="has-text-weight-bold has-text-centered purple-text">Try it below</span>
-    </article>
+            <p>Quinoa etsy cold-pressed 90's aesthetic. Meh prism organic 3 wolf moon waistcoat. Flannel jianbing kinfolk echo
+                park gentrify PBR&B ethical selvage. Cloud bread portland lumbersexual iceland vinyl synth bespoke, air plant
+                four loko try-hard normcore selfies ennui roof party neutra. Man bun vape humblebrag, butcher +1 affogato
+                post-ironic tbh. Banh mi lo-fi knausgaard, celiac poke cold-pressed 3 wolf moon keytar. Street art food truck
+                gochujang neutra literally iPhone disrupt man braid..</p>
+            <span class="has-text-weight-bold has-text-centered purple-text">Try it below</span>
+        </article>
 
-    <content class="">
-        <div id="journalForm"></div>
-        <section id="journalEntry" class="flexContainer"></section>
-    </content>
+        <content class="">
+            <div id="journalForm"></div>
+            <section id="journalEntry" class="flexContainer"></section>
+        </content>
+    </div>
 
     <script src="./app.js"></script>
 </body>
