added css modules

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700|Righteous" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/main.css">
     <title>junrl. The new way to take notes</title>
 </head>
 
@@ -59,8 +59,9 @@
                         to. No more missing out on the important things in life, like your son's birthday or picking up your
                         mom from the airport
                     </p>
+                    <hr>
                     <p>Don't remember it,
-                        <span class="purple-text has-text-weight-bold">jurnl it.</span>
+                        <span class="purple-text example-brand">jurnl it.</span>
                     </p>
                 </div>
             </div>
@@ -88,14 +89,18 @@
                 four loko try-hard normcore selfies ennui roof party neutra. Man bun vape humblebrag, butcher +1 affogato
                 post-ironic tbh. Banh mi lo-fi knausgaard, celiac poke cold-pressed 3 wolf moon keytar. Street art food truck
                 gochujang neutra literally iPhone disrupt man braid..</p>
-            <span class="has-text-weight-bold has-text-centered purple-text">Try it below</span>
+            <span class="has-text-weight-bold has-text-centered purple-text is-size-4">Try it below</span>
         </article>
 
         <content class="">
             <div id="journalForm"></div>
-            <section id="journalEntry" class="flexContainer"></section>
+            <section id="journalEntry" class="flexContainer entryList"></section>
         </content>
     </div>
+
+    <footer>
+        <p class="footer-brand">jurnl</p>
+    </footer>
 
     <script src="./app.js"></script>
 </body>
